# iris-classification

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
Flower_Classification/: Class_code.py  classifier_predict.py  clean_Data.py  read_Data.py  scale_Data.py  split_Data.py
Sleep_Deprivation_Analysis/: __init__.py
